--- a/sass/breakpoints/_breakpoints.scss
+++ b/sass/breakpoints/_breakpoints.scss
@@ -1,3 +1,3 @@
-@import 'breakpoints/laptop';
 @import 'breakpoints/tablet';
-@import 'breakpoints/mobile';
+@import 'breakpoints/laptop';
+@import 'breakpoints/desktop';
