--- a/sass/helpers/_helpers.scss
+++ b/sass/helpers/_helpers.scss
@@ -5,3 +5,15 @@
     clear: both;
     display: table;
 }
+*{
+    margin: 0;
+    padding: 0;
+}
+#maincontainer{
+    padding: 0 5%;
+    font-family: 'Montserrat', sans-serif;
+    margin: 0 auto;
+}
+a {
+    text-decoration: none;
+}
