--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -1,3 +1,3 @@
-$color-header: black ;
-$color-content: yellow;
-$color-footer: green;
+$color-header: white ;
+$color-content: white;
+$color-footer: #f2fbfb;
